PMD 7 fixes for css extension